# tetris-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/game/: main.rs
src/ml/: main.rs
src/tetris/: action.rs  block.rs  mod.rs  shape.rs  shape_factory.rs  tetris.rs
src/tetris/bot/: main.rs  mod.rs
src/tetris/bot/analysis/: mod.rs
src/tetris/bot/decisions/: mod.rs
src/tetris/bot/strategy/: mod.rs
src/tetris/bot/strategy/always_drop/: mod.rs
src/tetris/bot/strategy/fixed/: mod.rs
src/tetris/bot/strategy/nogaps/: mod.rs
src/tetris/bot/strategy/qlearning/: mod.rs
src/tetris/bot/strategy/random/: mod.rs
src/tetris/bot/strategy/weighted/: mod.rs
src/tetris/game/: main.rs
src/tetris/gui/: mod.rs
src/tetris/ml/: main.rs
