[package]
name = "tetris-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/tetris/game/main.rs"

[[bin]]
name = "bot"
path = "src/tetris/bot/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.2"
rand = "0.8.3"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25.0"

